--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/browser.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="QG9jD1obIkvhXTafOy5gROK4xZGwaV9uFRyejcLhwbg" />
     <title>Urbis</title>
   </head>
   <body>
