--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/png" href="/browser.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="google-site-verification" content="QG9jD1obIkvhXTafOy5gROK4xZGwaV9uFRyejcLhwbg" />
+    <meta name="msvalidate.01" content="C3D769C42428EEA35E474A0C9BD4B073" />
     <title>Urbis</title>
   </head>
   <body>
