--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/jpg" href="/favi.jpg" />
+    <link rel="icon" type="image/png" href="/favi.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="google-site-verification" content="QG9jD1obIkvhXTafOy5gROK4xZGwaV9uFRyejcLhwbg" />
     <meta name="msvalidate.01" content="C3D769C42428EEA35E474A0C9BD4B073" />
